@@ -1,5 +1,8 @@
 === xdg-utils 1.x.x ===
 
+2010-07-09 Rex Dieter <rdieter@fedoraproject.org> 
+    * xdg-desktop-icon :  use localized desktop folder name (BR19011)
+
 2010-07-09 Rex Dieter <rdieter@fedoraproject.org>
     * xdg-open : use mimeopen -L (follow symlinks)
 
